--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,5 @@
+ENVIRONMENT = "development"
+
 # App port: 
 PORT = 4000
 
@@ -6,4 +8,10 @@ MYSQL_HOST = "localhost"
 MYSQL_USER = "root"
 MYSQL_PASSWORD = "hk170168"
 MYSQL_DATABASE = "vacations"
+
+JWT_SECRET_KEY = "The Amazing Full Stack Students!"
+PASSWORD_SALT = "!עם ישראל חי"
+
+BASE_IMAGE_URL = "http://localhost:4000/api/products/images/"
+
 
