--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,10 +6,11 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
-    "@mui/material": "^5.16.1",
+    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^5.16.6",
     "@mui/styled-engine": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@mui/x-date-pickers": "^7.10.0",
+    "@mui/x-date-pickers": "^7.12.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@rsuite/icons": "^1.0.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -24,7 +25,8 @@
     "@types/react-redux": "^7.1.33",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.2",
-    "dayjs": "^1.11.11",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
     "jwt-decode": "^4.0.0",
     "notyf": "^3.10.0",
     "react": "^18.3.1",
