--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-fileupload": "^1.5.0",
+        "express-rate-limit": "^7.4.0",
         "joi": "^17.13.3",
         "joi-password": "^4.2.0",
         "joi-to-typescript": "^4.13.0",
