--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,11 +25,13 @@
     "@types/react-redux": "^7.1.33",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "jwt-decode": "^4.0.0",
     "notyf": "^3.10.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
@@ -66,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
     "@types/react-dates": "^21.8.6"
   }
 }
