--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,8 +28,10 @@
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "notyf": "^3.10.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
@@ -69,6 +71,8 @@
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.41",
+    "@types/file-saver": "^2.0.7",
+    "@types/papaparse": "^5.3.14",
     "@types/react-dates": "^21.8.6"
   }
 }
