--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,39 @@
 {
   "cSpell.words": [
     "chartjs",
+    "אורח",
+    "אותך",
+    "אימייל",
+    "בהתאם",
+    "בטוח",
     "בייצור",
+    "במטבע",
+    "הודעה",
     "הודעות",
+    "היעד",
+    "הסיום",
+    "העלה",
+    "הרשמה",
+    "התנתקות",
+    "כניסה",
     "ללקוח",
-    "מגוון"
-]
+    "למחוק",
+    "לעדכון",
+    "לראות",
+    "לראותך",
+    "מגוון",
+    "מינימום",
+    "משפחה",
+    "נמחק",
+    "נשמח",
+    "סיסמה",
+    "עריכה",
+    "פרטי",
+    "שבקרת",
+    "שלום",
+    "שמחים",
+    "שמעוניין",
+    "שנרשמת",
+    "תודה"
+  ]
 }
