--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
     "chartjs",
+    "TTFB",
     "אורח",
     "אותך",
     "אימייל",
@@ -27,6 +28,7 @@
     "נמחק",
     "נשמח",
     "סיסמה",
+    "עודכן",
     "עריכה",
     "פרטי",
     "שבקרת",
