--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "אורח",
     "אותך",
     "אימייל",
+    "בהרים",
     "בהתאם",
     "בטוח",
     "בייצור",
@@ -16,14 +17,19 @@
     "העלה",
     "הרשמה",
     "התנתקות",
+    "חדשים",
     "כניסה",
     "ללקוח",
+    "למחוזות",
     "למחוק",
     "לעדכון",
     "לראות",
     "לראותך",
     "מגוון",
+    "מופלא",
     "מינימום",
+    "מרוקו",
+    "מרכיבה",
     "משפחה",
     "נמחק",
     "נשמח",
@@ -32,6 +38,7 @@
     "עריכה",
     "פרטי",
     "שבקרת",
+    "שוויץ",
     "שלום",
     "שמחים",
     "שמעוניין",
