--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,17 +4,25 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon --exec ts-node src/app.ts --quiet"
+        "start": "nodemon --exec ts-node src/app.ts --quiet",
+        "test": "mocha --require ts-node/register tests/**/*.test.ts --exit"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/chai": "^4.3.19",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/express-fileupload": "^1.5.0",
         "@types/jsonwebtoken": "^9.0.6",
-        "@types/node": "^20.14.2"
+        "@types/mocha": "^10.0.7",
+        "@types/node": "^20.14.2",
+        "@types/supertest": "^6.0.2",
+        "chai": "^4.5.0",
+        "mocha": "^10.7.3",
+        "supertest": "^7.0.0",
+        "ts-node": "^10.9.2"
     },
     "dependencies": {
         "cors": "^2.8.5",
