--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -47,6 +47,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "test:unit": "mocha --require ts-node/register tests/**/*.test.ts --exit",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -70,9 +71,14 @@
     ]
   },
   "devDependencies": {
+    "@types/chai": "^4.3.19",
     "@types/chart.js": "^2.9.41",
     "@types/file-saver": "^2.0.7",
+    "@types/mocha": "^10.0.7",
     "@types/papaparse": "^5.3.14",
-    "@types/react-dates": "^21.8.6"
+    "@types/react-dates": "^21.8.6",
+    "chai": "^4.5.0",
+    "mocha": "^10.7.3",
+    "ts-node": "^10.9.2"
   }
 }
