--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "אורח",
     "אותך",
     "אימייל",
+    "באלפים",
     "בהרים",
     "בהתאם",
     "בטוח",
@@ -16,6 +17,8 @@
     "היעד",
     "הסיום",
     "העלה",
+    "הפרוסים",
+    "הצרפתים",
     "הרשמה",
     "התנתקות",
     "חדשים",
@@ -28,7 +31,9 @@
     "לראותך",
     "מגוון",
     "מופלא",
+    "מורזין",
     "מינימום",
+    "מסלולים",
     "מרוקו",
     "מרכיבה",
     "משפחה",
@@ -36,6 +41,7 @@
     "נשמח",
     "סיסמה",
     "עודכן",
+    "עצום",
     "עריכה",
     "פרטי",
     "שבקרת",
