--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "chartjs",
     "Dockerizing",
     "TTFB",
+    "אהבת",
     "אורח",
     "אותך",
     "אימייל",
@@ -12,6 +13,7 @@
     "בטוח",
     "בייצור",
     "במטבע",
+    "האתר",
     "הודעה",
     "הודעות",
     "היעד",
@@ -24,6 +26,7 @@
     "התנתקות",
     "חדשים",
     "כניסה",
+    "לימודי",
     "ללקוח",
     "למחוזות",
     "למחוק",
@@ -40,6 +43,7 @@
     "משפחה",
     "נמחק",
     "נשמח",
+    "סיכום",
     "סיסמה",
     "עודכן",
     "עצום",
@@ -47,10 +51,5 @@
     "פרטי",
     "שבקרת",
     "שוויץ",
-    "שלום",
-    "שמחים",
-    "שמעוניין",
-    "שנרשמת",
-    "תודה"
   ]
 }
